Opened 6 years ago

Closed 6 years ago

#8500 closed defect (fixed)

find_rect crash

Reported by: Michael Koch Owned by:
Priority: important Component: avfilter
Version: git-master Keywords: findrect crash abort
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Carl Eugen Hoyos)

Summary of the bug:
ffmpeg crashes when using find_rect

How to reproduce:

ffmpeg -i test1.png -vf find_rect=test2.pgm,cover_rect out.png

Input files:
http://www.astro-electronic.de/test1.png
http://www.astro-electronic.de/test2.pgm

Below is the console output:

C:\Users\mKoch\Desktop>c:\ffmpeg\ffmpeg -i test1.png -vf find_rect=test2.pgm,cover_rect out.png
ffmpeg version git-2020-01-24-e931119 Copyright (c) 2000-2020 the FFmpeg developers
  built with gcc 9.2.1 (GCC) 20200122
  configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libdav1d --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-ffnvcodec --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth --enable-libopenmpt --enable-amf
  libavutil      56. 38.100 / 56. 38.100
  libavcodec     58. 66.100 / 58. 66.100
  libavformat    58. 35.104 / 58. 35.104
  libavdevice    58.  9.103 / 58.  9.103
  libavfilter     7. 71.100 /  7. 71.100
  libswscale      5.  6.100 /  5.  6.100
  libswresample   3.  6.100 /  3.  6.100
  libpostproc    55.  6.100 / 55.  6.100
Input #0, png_pipe, from 'test1.png':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: png, pal8(pc), 323x300, 25 tbr, 25 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (png (native) -> png (native))
Press [q] to stop, [?] for help
Assertion score != 0 failed at src/libavfilter/vf_find_rect.c:172

Attachments (2)

test1.png (95.9 KB ) - added by Carl Eugen Hoyos 6 years ago.
test2.pgm (13.0 KB ) - added by Carl Eugen Hoyos 6 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by Carl Eugen Hoyos, 6 years ago

Description: modified (diff)
Keywords: findrect crash abort added; find_rect removed
Priority: normalimportant
Reproduced by developer: set
Status: newopen

by Carl Eugen Hoyos, 6 years ago

Attachment: test1.png added

by Carl Eugen Hoyos, 6 years ago

Attachment: test2.pgm added

comment:2 by Carl Eugen Hoyos, 6 years ago

Resolution: fixed
Status: openclosed

Should be fixed by Michael in dfc471488675aa257183745502d0074055db3bd2]

Note: See TracTickets for help on using tickets.